--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "joi": "^17.10.1",
     "mapbox-gl": "^2.15.0",
